Save and display packing slip dimensions.

--- a/Thermory.Web/Views/PackingSlip/Index.cshtml
+++ b/Thermory.Web/Views/PackingSlip/Index.cshtml
@@ -4,6 +4,8 @@
     Layout = null;
     var shipDate = Model.Package.Order.ShipDate == null ? null : Model.Package.Order.ShipDate.Value.ToString("MMMM dd, yyyy");
     var customer = Model.Package.Order.Customer ?? new Customer();
+    var dimensions = Model.Package.Height == null || Model.Package.Length == null || Model.Package.Width == null
+        ? "" : string.Format("{0} x {1} x {2}", Model.Package.Height, Model.Package.Length, Model.Package.Width);
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -31,40 +33,47 @@
             <td class="packingSlipCell">&nbsp;</td>
         </tr>
         <tr>
-            <td class="packingSlipCell" style="text-align: right;"><strong>Ship Date:</strong></td>
-            <td class="packingSlipCell" style="text-align: right;"><strong>@shipDate</strong></td>
-            <td class="packingSlipCell" style="text-align: right;"><strong>Customer PO#</strong></td>
-            <td class="packingSlipCell" style="text-align: center;"><strong>@Model.Package.Order.OrderNumber</strong></td>
+            <td class="packingSlipCell" style="text-align: right;">Ship Date:</td>
+            <td class="packingSlipCell" style="text-align: right;">@shipDate</td>
+            <td class="packingSlipCell">&nbsp;</td>
+            <td class="packingSlipCell" style="text-align: right;">Customer PO#</td>
+            <td class="packingSlipCell" style="text-align: center;">@Model.Package.Order.OrderNumber</td>
         </tr>
         @if (!string.IsNullOrEmpty(Model.Package.Order.Notes))
         {
             <tr>
-                <td colspan="4" style="text-align: right;"><em>@Model.Package.Order.Notes</em></td>
+                <td colspan="5" style="text-align: right;"><em>@Model.Package.Order.Notes</em></td>
             </tr>
         }
         <tr class="packingSlipBottomBorder packingSlipTopBorder">
             <td class="packingSlipCell packingSlipSection">Customer:</td>
-            <td class="packingSlipCell" colspan="3">@customer.Name</td>
+            <td class="packingSlipCell" colspan="4">@customer.Name</td>
         </tr>
         <tr>
             <td class="packingSlipCell packingSlipSection" rowspan="2">Address:</td>
-            <td class="packingSlipCell" colspan="3">@customer.AddressLine1</td>
+            <td class="packingSlipCell" colspan="4">@customer.AddressLine1</td>
         </tr>
         <tr class="packingSlipBottomBorder">
-            <td class="packingSlipCell" colspan="3">@customer.AddressLine2</td>
+            <td class="packingSlipCell" colspan="4">@customer.AddressLine2</td>
         </tr>
-        <tr class="packingSlipBottomBorder">
-            <td class="packingSlipCell packingSlipSection">@Model.Package.Order.PackagingType.Name #</td>
+        <tr>
+            <td class="packingSlipCell packingSlipSection" rowspan="2">@Model.Package.Order.PackagingType.Name #</td>
+            <td class="packingSlipCell">&nbsp;</td>
             <td class="packingSlipCell packageNumber" style="text-align: right;">@Model.Package.PackageNumber</td>
             <td class="packingSlipCell" style="text-align: center;">of</td>
             <td class="packingSlipCell packageNumber">@Model.TotalPackages</td>
         </tr>
         <tr class="packingSlipBottomBorder">
+            <td class="packingSlipCell"><em>Dimensions:</em></td>
+            <td class="packingSlipCell">@dimensions</td>
+            <td class="packingSlipCell" colspan="2"></td>
+        </tr>
+        <tr class="packingSlipBottomBorder">
             <td class="packingSlipCell packingSlipSection">Weight</td>
-            <td class="packingSlipCell" colspan="3">@Model.Package.Weight lbs (approximate)</td>
+            <td class="packingSlipCell" colspan="4">@Model.Package.Weight lbs (approx.)</td>
         </tr>
         <tr>
-            <td class="packingSlipCell" colspan="4">
+            <td class="packingSlipCell" colspan="5">
                 @{
                     @Html.Partial("Package/_LumberProductReview", Model.Package)
                     @Html.Partial("Package/_MiscellaneousProductReview", Model.Package)
