--- a/Thermory.Web/Views/Shared/Order/Form.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Form.cshtml
@@ -110,7 +110,7 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="text" id="shipDate" class="form-control datefield" readonly="readonly" style="background-color: white; color: black;" value="@shipDate" />
+                            <input type="text" id="shipDate" class="form-control datefield" readonly="readonly" style="background-color: white; color: black; cursor: pointer;" value="@shipDate" />
                         </td>
                         <td>
                             <span class="badge danger"><span class="glyphicon glyphicon-remove" onclick="clearShipDate();" style="cursor: pointer;"></span></span>
