--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -330,20 +330,52 @@
                 <div id="packingSlips" class="tab-pane">
                     @if (User.IsInRole(Role.InventoryMaster) || User.IsInRole(Role.WarehouseCrew))
                     {
-                        <div style="padding: 5px 5px 0 5px;">
-                            <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
-                                <span class="glyphicon glyphicon-edit"></span> Edit packaging slip(s)
+                        <div class="btn-group">
+                            <div style="padding: 5px 5px 10px 5px;">
+                                <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
+                                    <span class="glyphicon glyphicon-edit"></span> Edit Packaging Slip(s)
+                                </div>
+                                <div class="btn btn-primary packingSlipView" onclick="editPackingSlipDimensions();">
+                                    <span class="glyphicon glyphicon-edit"></span> Edit Packaging Slip Dimensions
+                                </div>
                             </div>
                         </div>
                     }
-                    @foreach (var package in Model.Order.Packages)
-                    {
-                        <div style="padding: 5px 5px 0 5px;">
-                            <a href="/PackingSlip/Index/?orderId=@Model.Order.Id&packageNumber=@package.PackageNumber" target="_blank">
-                                <span class="glyphicon glyphicon-list-alt"></span> @Model.Order.PackagingType.Name @package.PackageNumber
-                            </a>
+                    <div id="packageErrorPanel" class="alert alert-danger" role="alert" style="display: none; margin-top: 14px;">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        <span class="sr-only">Error:</span>
+                        <span id="packageErrorMessage"></span>
+                    </div>
+                    <form class="form-inline">
+                        @foreach (var package in Model.Order.Packages)
+                        {
+                            <div class=" btn btn-warning" onclick="window.open('/PackingSlip/Index/?orderId=@Model.Order.Id&packageNumber=@package.PackageNumber', '_blank'); ">
+                                <span class="glyphicon glyphicon-list-alt"></span> View @Model.Order.PackagingType.Name @package.PackageNumber
+                            </div>
+                            <div class="form-group packingSlipView">
+                                <span id="@string.Format("package{0}Dimensions", package.PackageNumber)">@package.Dimensions</span>
+                            </div>
+                            <div class="form-group packingSlipForm" style="display: none;">
+                                <input type="hidden" id="@string.Format("package{0}Id", package.PackageNumber)" value="@package.Id" />
+                                <input type="hidden" id="@string.Format("package{0}OrderId", package.PackageNumber)" value="@package.OrderId" />
+                                <input type="text" id="@string.Format("package{0}Height", package.PackageNumber)" class="numeric" style="width: 100px;" value="@package.Height" />
+                                x
+                                <input type="text" id="@string.Format("package{0}Length", package.PackageNumber)" class="numeric" style="width: 100px;" value="@package.Length" />
+                                x
+                                <input type="text" id="@string.Format("package{0}Width", package.PackageNumber)" class="numeric" style="width: 100px;" value="@package.Width" />
+                            </div>
+                            <br class="packingSlipView" />
+                            <br />
+                        }
+                        <div class="form-group packingSlipForm" style="display: none;">
+                            <div class="btn btn-success" onclick="updatePackingSlipDimensions();">
+                                <span class="glyphicon glyphicon-save"></span> Save
+                            </div>
+                            <div class="btn btn-danger" onclick="showPackingSlipDimensions();">
+                                <span class="glyphicon glyphicon-remove"></span> Cancel
+                            </div>
                         </div>
-                    }
+                    </form>
                 </div>
             }
         }
@@ -492,6 +524,57 @@
             error: function (data, status, request) {
                 $('#worksheetPanel').show();
                 $('#orderTransitioningPanel').hide();
+            }
+        });
+    }
+
+    function editPackingSlipDimensions() {
+        $('.packingSlipView').hide();
+        $('.packingSlipForm').show();
+    }
+
+    function showPackingSlipDimensions() {
+        $('.packingSlipView').show();
+        $('.packingSlipForm').hide();
+    }
+
+    function updatePackingSlipDimensions() {
+        $('#packageErrorPanel').hide();
+        showPackingSlipDimensions();
+
+        var packages = new Array();
+        for (var i = 1; i <= @Model.Order.Packages.Count; i++){
+            packages.push({
+                Id: $('#package' + i + 'Id').val(),
+                OrderId: $('#package' + i + 'OrderId').val(),
+                PackageNumber: i,
+                Height: $('#package' + i + 'Height').val(),
+                Length: $('#package' + i + 'Length').val(),
+                Width: $('#package' + i + 'Width').val()
+            });
+            var dimensions = $('#package' + i + 'Height').val() + ' x ' + $('#package' + i + 'Length').val() + ' x ' + $('#package' + i + 'Width').val();
+            console.log(dimensions);
+            $('#package' + i + 'Dimensions').text(dimensions);
+        }
+        var packagesJson = JSON.stringify(packages);
+        var postData = '{"packages" : ' + packagesJson + '}';
+
+        console.log(postData);
+
+        $.ajax({
+            type: 'POST',
+            url: '@Url.Action("UpdatePackages", "SalesOrder")',
+            contentType: 'application/json',
+            dataType: 'json',
+            data: postData,
+            success: function (data, status, request) {
+            },
+            error: function (data, status, request) {
+                console.log(data);
+                console.log(status);
+                console.log(request);
+                $('#packageErrorMessage').html('<span>' + data.responseText.replace('\n', ' <br/> ') + '</span>');
+                $('#packageErrorPanel').show();
             }
         });
     }
