--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -333,7 +333,7 @@
                         <div class="btn-group">
                             <div style="padding: 5px 5px 10px 5px;">
                                 <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
-                                    <span class="glyphicon glyphicon-edit"></span> Edit Packaging Slip(s)
+                                    <span class="glyphicon glyphicon-repeat"></span> Recreate Packaging Slip(s)
                                 </div>
                                 <div class="btn btn-primary packingSlipView" onclick="editPackingSlipDimensions();">
                                     <span class="glyphicon glyphicon-edit"></span> Edit Packaging Slip Dimensions
@@ -350,7 +350,7 @@
                         @foreach (var package in Model.Order.Packages)
                         {
                             <div class=" btn btn-warning" onclick="window.open('/PackingSlip/Index/?orderId=@Model.Order.Id&packageNumber=@package.PackageNumber', '_blank'); ">
-                                <span class="glyphicon glyphicon-list-alt"></span> View @Model.Order.PackagingType.Name @package.PackageNumber
+                                <span class="glyphicon glyphicon-print"></span> View @Model.Order.PackagingType.Name @package.PackageNumber
                             </div>
                             <div class="form-group packingSlipView">
                                 <span id="@string.Format("package{0}Dimensions", package.PackageNumber)">@package.Dimensions</span>
@@ -369,7 +369,7 @@
                         }
                         <div class="form-group packingSlipForm" style="display: none;">
                             <div class="btn btn-success" onclick="updatePackingSlipDimensions();">
-                                <span class="glyphicon glyphicon-save"></span> Save
+                                <span class="glyphicon glyphicon-ok"></span> Save
                             </div>
                             <div class="btn btn-danger" onclick="showPackingSlipDimensions();">
                                 <span class="glyphicon glyphicon-remove"></span> Cancel
