Updated packing slip view address.

--- a/Thermory.Web/Views/PackingSlip/Index.cshtml
+++ b/Thermory.Web/Views/PackingSlip/Index.cshtml
@@ -46,10 +46,10 @@
         </tr>
         <tr>
             <td class="packingSlipCell packingSlipSection" rowspan="2">Address:</td>
-            <td class="packingSlipCell" colspan="4">@Model.Customer.AddressLine1</td>
+            <td class="packingSlipCell" colspan="4">@Model.ShipToAddress.AddressLine1</td>
         </tr>
         <tr class="packingSlipBottomBorder">
-            <td class="packingSlipCell" colspan="4">@Model.Customer.AddressLine2</td>
+            <td class="packingSlipCell" colspan="4">@Model.ShipToAddress.AddressLine2</td>
         </tr>
         <tr>
             <td class="packingSlipCell packingSlipSection" rowspan="2">@Model.Package.Order.PackagingType.Name #</td>
