--- a/Thermory.Web/Views/Inventory/_MiscSummary.cshtml
+++ b/Thermory.Web/Views/Inventory/_MiscSummary.cshtml
@@ -15,7 +15,7 @@
         {
             <tr>
                 <td class="productType">@miscellaneousProduct.Name (@miscellaneousProduct.Description)</td>
-                <td class="productType">@miscellaneousProduct.Quantity</td>
+                <td class="productType">@miscellaneousProduct.Quantity.ToString("n0")</td>
             </tr>
         }
     }
