--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -268,15 +268,15 @@
                     </colgroup>
                     <tr>
                         <td>Total Pieces</td>
-                        <td>@Model.Order.TotalPieces</td>
+                        <td>@Model.Order.TotalPieces.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Total Linear Feet</td>
-                        <td>@Model.Order.TotalLinearFeet</td>
+                        <td>@Model.Order.TotalLinearFeet.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Total Square Feet</td>
-                        <td>@Model.Order.TotalSquareFeet</td>
+                        <td>@Model.Order.TotalSquareFeet.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Time To Pull</td>
@@ -284,15 +284,15 @@
                     </tr>
                     <tr>
                         <td>Pieces Pulled Per Hour</td>
-                        <td>@Model.Order.PiecesPulledPerHour</td>
+                        <td>@Model.Order.PiecesPulledPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Linear Feet Pulled Per Hour</td>
-                        <td>@Model.Order.LinearFeetPulledPerHour</td>
+                        <td>@Model.Order.LinearFeetPulledPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Square Feet Pulled Per Hour</td>
-                        <td>@Model.Order.SquareFeetPulledPerHour</td>
+                        <td>@Model.Order.SquareFeetPulledPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Time To Load</td>
@@ -300,15 +300,15 @@
                     </tr>
                     <tr>
                         <td>Pieces Loaded Per Hour</td>
-                        <td>@Model.Order.PiecesLoadedPerHour</td>
+                        <td>@Model.Order.PiecesLoadedPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Linear Feet Loaded Per Hour</td>
-                        <td>@Model.Order.LinearFeetLoadedPerHour</td>
+                        <td>@Model.Order.LinearFeetLoadedPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Square Feet Loaded Per Hour</td>
-                        <td>@Model.Order.SquareFeetLoadedPerHour</td>
+                        <td>@Model.Order.SquareFeetLoadedPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Total Time to Pull and Load</td>
@@ -316,15 +316,15 @@
                     </tr>
                     <tr>
                         <td>Pieces Pulled and Loaded Per Hour</td>
-                        <td>@Model.Order.PiecesPulledAndLoadedPerHour</td>
+                        <td>@Model.Order.PiecesPulledAndLoadedPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Linear Feet Loaded Per Hour</td>
-                        <td>@Model.Order.LinearFeetPulledAndLoadedPerHour</td>
+                        <td>@Model.Order.LinearFeetPulledAndLoadedPerHour.ToString("n0")</td>
                     </tr>
                     <tr>
                         <td>Square Feet Loaded Per Hour</td>
-                        <td>@Model.Order.SquareFeetPulledAndLoadedPerHour</td>
+                        <td>@Model.Order.SquareFeetPulledAndLoadedPerHour.ToString("n0")</td>
                     </tr>
                 </table>
             </div>
