--- a/Thermory.Web/Views/Shared/Package/_MiscellaneousProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Package/_MiscellaneousProductReview.cshtml
@@ -25,7 +25,7 @@
                         <td>@lineItem.MiscellaneousProduct.Name</td>
                         <td>@lineItem.MiscellaneousProduct.Description</td>
                         <td>@lineItem.Quantity</td>
-                        <td>@lineItem.Weight</td>
+                        <td>@lineItem.Weight.ToString("n2")</td>
                     }
                 </tr>
             }
