Another number format change.

--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
@@ -23,7 +23,7 @@
                         <td>@subCategory.Name</td>
                         <td>@lineItem.MiscellaneousProduct.Name</td>
                         <td>@lineItem.MiscellaneousProduct.Description</td>
-                        <td>@lineItem.Quantity</td>
+                        <td>@lineItem.Quantity.ToString("n0")</td>
                     }
                 </tr>
             }
