--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousLineItemForm.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousLineItemForm.cshtml
@@ -23,7 +23,7 @@
                 <td class="productType">@miscProduct.Name (@miscProduct.Description)</td>
                 <td class="productType">
                     <input type="hidden" id="@onHandId" value="@miscProduct.Quantity" />
-                    @miscProduct.Quantity
+                    @miscProduct.Quantity.ToString("n0")
                 </td>
                 <td class="productType">
                     <div style="width: 100px;"><input type="text" name="miscQty" id="@lineItemId" productid="@miscProduct.Id" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange="miscProductQuantityChanged('@miscProduct.Id');" /></div>
