--- a/Thermory.Web/Views/PackingSlip/Index.cshtml
+++ b/Thermory.Web/Views/PackingSlip/Index.cshtml
@@ -65,7 +65,7 @@
         </tr>
         <tr class="packingSlipBottomBorder">
             <td class="packingSlipCell packingSlipSection">Weight</td>
-            <td class="packingSlipCell" colspan="4">@Model.Package.Weight.ToString("n0") lbs (approx.)</td>
+            <td class="packingSlipCell" colspan="4">@Model.Package.Weight.ToString("n0") lbs</td>
         </tr>
         <tr>
             <td class="packingSlipCell" colspan="5">
